# libovf-glib

./: AUTHORS  Makefile.am  README  configure.ac  libgovf.pc.in  libovf-glib-0.1.pc.in
govf/: Makefile.am  govf-disk.c  govf-disk.h  govf-package.c  govf-package.h  govf.h
libovf-glib/: Makefile.am  ovf-disk.c  ovf-disk.h  ovf-package.c  ovf-package.h  ovf-parser.c  ovf-parser.h  ovf.h
tests/: Fedora_23.ova  Fedora_23.ovf  Makefile.am  parser.c
